# check-cmake-example

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: FindValgrind.cmake
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  sample.c
src/lib/includes/: sample.h
tests/: CMakeLists.txt  test_sample.c
